[package]
name = "rthunder"
description = "A GTK+ audio ripper frontend"
version = "0.1.1"
authors = ["patrickp89 <patrickpreuss@netherspace.de>"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
gtk = { version = "0.9.0", features = ["v3_16"] }
libcdio-sys = "0.3.0"
libcddb-sys = { git  = "https://github.com/patrickp89/libcddb-sys" }
