[package]
name = "rthunder"
description = "A GTK+ audio ripper frontend"
version = "0.1.1"
authors = ["patrickp89 <patrickpreuss@netherspace.de>"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
gtk = { version = "0.9.0", features = ["v3_16"] }
gtk-test = "0.6.1"
glib = "^0.10.1"
libcdio-sys = { git = "https://github.com/patrickp89/libcdio-sys", branch = "chore/bump-versions" }
libcddb-sys = { git = "https://github.com/patrickp89/libcddb-sys" }

[[test]]
harness = false
name = "ui_startup"
